Implemented schedule GET/POST endpoints
beePicker/schedule [GET] returns every schedule of the user in the schedules.json
beePicker/schedule [POST] saves the given schedule (name, ECRN, SCRN] to schedules.json (overwrites the schedule with the same name or creates new entry if the given name does not exists)
